fix script link

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ $404router.route('/test/:id',function(pram){
 })
 </pre></code>
 </body>
-<script src="./lib/404router.js"></script>
+<script src="/lib/404router.js"></script>
 <script>
 $404router.route('/test/:id',function(pram){
 	document.getElementById('result').innerHTML = pram.id;
